# lvlr

./: .gitmodules  CMakeLists.txt  TODO.md  run.bat
src/cpp/: AudioContainer.cpp  Biquad.cpp  ConToDefProcess.cpp  FileAudioSource.cpp  biquad.cpp  checks.cpp  main.cpp  utils.cpp
src/h/: AudioContainer.h  AudioProcess.h  AudioSource.h  Biquad.h  ConToDefProcess.h  ContainerAudioSource.h  DSPFilter.h  FileAudioSource.h  app.h  biquad.h  filter.h
